update version 2.0.0 cookie session

--- a/AuthApiProject/AuthApi/appsettings.json
+++ b/AuthApiProject/AuthApi/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=DESKTOP-U2V9E9Q;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+    "Jwt": {
+        "Key": "oAYSsVV1Fe8gthW0VIMdTMr7NQ4QtnAcV0T/RjlQVB4=", // Thay bằng một key bí mật mạnh
+        "Issuer": "AuthApi",
+        "Audience": "AuthApi"
     }
 }
