--- a/AuthApiProject/AuthApi/AuthApi.csproj
+++ b/AuthApiProject/AuthApi/AuthApi.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
+    <PackageReference Include="Twilio" Version="7.10.0" />
   </ItemGroup>
 
   <ItemGroup>
