--- a/my-auth-fe/package.json
+++ b/my-auth-fe/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.2.1",
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
