--- a/AuthApiProject/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/AuthApiProject/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
   <PropertyGroup>
