--- a/my-auth-fe/.env
+++ b/my-auth-fe/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_URL=https://localhost:7032
 HTTPS=true
-SSL_CRT_FILE=./cert/cert.pem
-SSL_KEY_FILE=./cert/key.pem
+# SSL_CRT_FILE=./cert/cert.pem
+# SSL_KEY_FILE=./cert/key.pem
+WDS_SOCKET_PORT=0
