hoàn thành login

--- a/my-auth-fe/.env
+++ b/my-auth-fe/.env
@@ -1,5 +1,7 @@
-REACT_APP_API_URL=https://localhost:7032
+REACT_APP_API_URL=https://my1stapp.com:7032
 HTTPS=true
 # SSL_CRT_FILE=./cert/cert.pem
 # SSL_KEY_FILE=./cert/key.pem
 WDS_SOCKET_PORT=0
+HOST=my1stapp.com
+PORT=3000
