--- a/AuthApiProject/AuthApi/Properties/launchSettings.json
+++ b/AuthApiProject/AuthApi/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29069",
-      "sslPort": 44361
+        "applicationUrl": "http://my1stapp.com:29069",
+        "sslPort": 44361
     }
   },
   "profiles": {
@@ -14,7 +14,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "launchUrl": "swagger",
-        "applicationUrl": "https://localhost:7032;http://localhost:5111",
+        "applicationUrl": "https://my1stapp.com:7032;http://my1stapp.com:5111",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         }
