--- a/AuthApiProject/AuthApi/appsettings.json
+++ b/AuthApiProject/AuthApi/appsettings.json
@@ -15,8 +15,8 @@
         "Audience": "AuthApi"
     },
     "Twilio": {
-        "AccountSid": "AC025667e7c14cbf782c8b310bd7e652c1",
-        "AuthToken": "0b8e60836ed3cb4c75430c503c06df95",
+        "AccountSid": "", //AC025667e7c14cbf782c8b310bd7e652c1
+        "AuthToken": "", //0b8e60836ed3cb4c75430c503c06df95
         "PhoneNumber": "+84917681810"
     }
 }
