--- a/AuthApiProject/AuthApi/appsettings.json
+++ b/AuthApiProject/AuthApi/appsettings.json
@@ -10,13 +10,13 @@
         "DefaultConnection": "Server=DESKTOP-U2V9E9Q;Database=AuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "Jwt": {
-        "Key": "dVQwrMHTLEHcT7ZsHcR5vhkoosK3BlatbR6eT8nPt0M=", // Thay bằng một key bí mật mạnh: null,: null,
+        "Key": "dVQwrMHTLEHcT7ZsHcR5vhkoosK3BlatbR6eT8nPt0M=", 
         "Issuer": "AuthApi",
         "Audience": "AuthApi"
     },
     "Twilio": {
-        "AccountSid": "", //AC025667e7c14cbf782c8b310bd7e652c1
-        "AuthToken": "", //0b8e60836ed3cb4c75430c503c06df95
-        "PhoneNumber": "+84917681810"
+        "AccountSid": "", 
+        "AuthToken": "", 
+        "PhoneNumber": ""
     }
 }
