--- a/my-auth-fe/.gitignore
+++ b/my-auth-fe/.gitignore
@@ -22,5 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Ignore appsettings.json
-AuthApiProject/AuthApi/appsettings.json
+# Ignore appsettings.jso
